@@ -1,3 +1,8 @@
+2008-07-15 13:04 jannis
+
+	* autogen.sh: Change @REVISION@ substitution for git svn repositories
+	  again.
+
 2008-07-09 23:57 jannis
 
 	* autogen.sh: Fix @REVISION@ subsitution when using git svn. 
